
API Changes since v1.4:
- In NaviManager:
-- NaviManager::GetPointer has been added
-- NaviManager::Startup has been merged into the constructor for NaviManager.
-- NaviManager::Shutdown no longer exists, just delete NaviManager instead.
-- You must instantiate (new NaviManager(renderWin)) NaviManager before accessing the singleton via NaviManager::Get/NaviManager::GetPointer.
-- Massive refactoring of interface. Manipulation of Navis by name through NaviManager is no longer supported. NaviManager is now purely for the creation/destruction of Navis, global input injection, and methods that affect mass number of Navis. To manipulate individual Navis, you should obtain a direct pointer to a Navi from NaviManager and then manipulate it using the public interface of the Navi itself.
--- NaviManager::createNavi/createNaviMaterial return pointers to the Navis that are created.
--- NaviManager::createNavi/createNaviMaterial have lost several parameters
--- NaviManager::getNavi looks up a Navi by name and returns a pointer to the Navi; if the Navi is not found, returns 0.
--- NaviManager::StartupMouse and NaviManager::getMouse have been removed. The NaviMouse singleton should now be instantiated separately.
- In Navi:
-- Massive refactoring of interface, a plethora of member functions are now public.
-- Many of the methods for Navi manipulation that were previously only available through NaviManager have been refactored directly into Navi.
-- Most of the setter methods return a pointer to the Navi that it was invoked on to allow chaining of setters.
-- Navi::getExtents has been added
-- Navi::evaluateJS now has an optional second parameter (NaviUtilities::Args, a vector of variants) that lets you evaluate the Javascript as a template (use '?' as the pseudo-character, strings will automatically be quoted).
- In NaviMouse:
-- Is now a true singleton. You must instantiate it (new NaviMouse()) before accessing it via NaviMouse::Get/GetPointer.