@@ -1,33 +1,0 @@
-21:55:28: Creating resource group General
-21:55:28: Creating resource group Internal
-21:55:28: Creating resource group Autodetect
-21:55:28: SceneManagerFactory for type 'DefaultSceneManager' registered.
-21:55:28: Registering ResourceManager for type Material
-21:55:28: Registering ResourceManager for type Mesh
-21:55:28: Registering ResourceManager for type Skeleton
-21:55:28: MovableObjectFactory for type 'ParticleSystem' registered.
-21:55:28: OverlayElementFactory for type Panel registered.
-21:55:28: OverlayElementFactory for type BorderPanel registered.
-21:55:28: OverlayElementFactory for type TextArea registered.
-21:55:28: Registering ResourceManager for type Font
-21:55:28: ArchiveFactory for archive type FileSystem registered.
-21:55:28: ArchiveFactory for archive type Zip registered.
-21:55:28: FreeImage version: 3.9.2
-21:55:28: This program uses FreeImage, a free, open source image library supporting all common bitmap formats. See http://freeimage.sourceforge.net for details
-21:55:28: Supported formats: bmp,ico,jpg,jif,jpeg,jpe,jng,koa,iff,lbm,mng,pbm,pbm,pcd,pcx,pgm,pgm,png,ppm,ppm,ras,tga,targa,tif,tiff,wap,wbmp,wbm,psd,cut,xbm,xpm,gif,hdr,g3,sgi
-21:55:28: DDS codec registering
-21:55:28: Registering ResourceManager for type HighLevelGpuProgram
-21:55:28: Registering ResourceManager for type Compositor
-21:55:28: MovableObjectFactory for type 'Entity' registered.
-21:55:28: MovableObjectFactory for type 'Light' registered.
-21:55:28: MovableObjectFactory for type 'BillboardSet' registered.
-21:55:28: MovableObjectFactory for type 'ManualObject' registered.
-21:55:28: MovableObjectFactory for type 'BillboardChain' registered.
-21:55:28: MovableObjectFactory for type 'RibbonTrail' registered.
-21:55:28: OGRE EXCEPTION(6:FileNotFoundException): 'plugins.cfg' file not found! in ConfigFile::load at e:\projects\ogrecvs\branches\eihort_vc8_clean\ogrenew\ogremain\src\ogreconfigfile.cpp (line 84)
-21:55:28: plugins.cfg not found, automatic plugin loading disabled.
-21:55:28: *-*-* OGRE Initialising
-21:55:28: *-*-* Version 1.4.1 (Eihort)
-21:55:28: OGRE EXCEPTION(6:FileNotFoundException): 'ogre.cfg' file not found! in ConfigFile::load at e:\projects\ogrecvs\branches\eihort_vc8_clean\ogrenew\ogremain\src\ogreconfigfile.cpp (line 84)
-21:55:28: OGRE EXCEPTION(6:FileNotFoundException): 'ogre.cfg' file not found! in ConfigFile::load at e:\projects\ogrecvs\branches\eihort_vc8_clean\ogrenew\ogremain\src\ogreconfigfile.cpp (line 84)
-21:55:29: *-*-* OGRE Shutdown
